feat: cria lógica para garantir que um usuário edite e veja apenas as suas disciplinas