@@ -1,82 +1,121 @@
 package app.ritmo.aplicacaoritmo.services;
 
 import app.ritmo.aplicacaoritmo.domain.Disciplina;
+import app.ritmo.aplicacaoritmo.domain.Usuario;
 import app.ritmo.aplicacaoritmo.dto.DisciplinaInputDTO;
 import app.ritmo.aplicacaoritmo.dto.DisciplinaOutputDTO;
 import app.ritmo.aplicacaoritmo.exceptions.EntidadeDuplicadaException;
-import app.ritmo.aplicacaoritmo.exceptions.NegocioException;
 import app.ritmo.aplicacaoritmo.exceptions.RecursoNaoEncontrado;
+import app.ritmo.aplicacaoritmo.infra.security.SecurityUtils;
 import app.ritmo.aplicacaoritmo.repositories.DisciplinaRepository;
 import jakarta.transaction.Transactional;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
 
 @Service
+@RequiredArgsConstructor
 public class DisciplinaService {
-    @Autowired
-    private DisciplinaRepository repository;
+
+    private final DisciplinaRepository repository;
+    private final SecurityUtils securityUtils;
+    private final AuditoriaService auditoriaService;
 
     @Transactional
     public void cadastrar(DisciplinaInputDTO dto) {
-        String nomePadronizado = dto.nome().trim().toLowerCase();
-        // verfica se a disciplina existe
-        if(repository.existsByNome(nomePadronizado)){
-            throw new EntidadeDuplicadaException("Já existe uma disciplina cadastrada com esse nome");
+        Usuario usuario = usuarioLogado();
+        String nome = normalizarNome(dto.nome());
+
+        if (repository.existsByNomeAndUsuarioId(nome, usuario.getId())) {
+            throw new EntidadeDuplicadaException(
+                    "Já existe uma disciplina cadastrada com esse nome"
+            );
         }
-        // padroniza o salvamento de disciplinas no banco com letra minúscula
-        Disciplina disciplina = new Disciplina(nomePadronizado);
+
+        Disciplina disciplina = new Disciplina(nome);
+        disciplina.setUsuario(usuario);
+
         repository.save(disciplina);
+
+        auditoriaService.registrar(usuario.getEmail(), AcaoAuditoria.CRIAR_DISCIPLINA, "Criou a disciplina: " + nome);
     }
 
-    public List<DisciplinaOutputDTO> listar(){
-        // na listagem de disciplinas, para melhor user experience, capitalizamos as disciplinas
-        return repository.findAll().stream()
-                .map(d -> new DisciplinaOutputDTO(d.getId(), capitalizar(d.getNome())))
-                .collect(Collectors.toList());
+    @Transactional
+    public List<DisciplinaOutputDTO> listarDoUsuarioLogado() {
+        Usuario usuario = usuarioLogado();
+
+        return repository.findByUsuarioId(usuario.getId())
+                .stream()
+                .map(this::paraOutput)
+                .toList();
     }
 
-    // metodo para mostrar disciplinas com a primeira letra em maíusculo. Melhorando a UX
-    public static String capitalizar(String texto) {
-        if (texto == null || texto.isEmpty()) {
-            return texto;
-        }
-        // Retorna a primeira letra em maiúscula + o restante da string
-        return texto.substring(0, 1).toUpperCase() + texto.substring(1);
+    @Transactional
+    public DisciplinaOutputDTO buscarPeloIdDoUsuario(Long id) {
+        Usuario usuario = usuarioLogado();
+
+        Disciplina disciplina = buscarEntidadeDoUsuario(id, usuario.getId());
+
+        return paraOutput(disciplina);
     }
 
-    // metodo para buscar a displina pelo id (e permitir posterior edição)
-    public DisciplinaOutputDTO buscarPeloId(Long id) {
-        Disciplina disciplina = repository.findById(id).orElseThrow(()-> new RecursoNaoEncontrado("Disciplina não encontrada!"));
-
-        // se a disciplina for encontrada pelo id, cria e retorna um novo dto
-        return new DisciplinaOutputDTO(disciplina.getId(), capitalizar(disciplina.getNome()));
-    }
-
-    // metodo para atualizar uma disciplina
     @Transactional
     public void atualizar(Long id, DisciplinaInputDTO dto) {
-        Disciplina disciplina = repository.findById(id).orElseThrow(()->new RecursoNaoEncontrado("Disciplina não encontrada!"));
+        Usuario usuario = usuarioLogado();
+        Disciplina disciplina = buscarEntidadeDoUsuario(id, usuario.getId());
+        String novoNome = normalizarNome(dto.nome());
 
-        String novoNomePadronizado = dto.nome().trim().toLowerCase();
-
-        // não é possível renomear uma disciplina com o nome de outra disciplina
-        if (repository.existsByNomeAndIdNot(novoNomePadronizado, id)) {
-            throw new EntidadeDuplicadaException("Já existe uma disciplina com esse nome!");
+        if (repository.existsByNomeAndUsuarioIdAndIdNot(novoNome, usuario.getId(), id)) {
+            throw new EntidadeDuplicadaException(
+                    "Já existe uma disciplina com esse nome"
+            );
         }
 
-        disciplina.setNome(novoNomePadronizado);
+        String nomeAnterior = disciplina.getNome();
+        disciplina.setNome(novoNome);
+
+        // Não é obrigatório chamar save: a entidade está gerenciada pela transação.
         repository.save(disciplina);
+
+        auditoriaService.registrar(usuario.getEmail(),AcaoAuditoria.ATUALIZAR_DISCIPLINA,"Alterou a disciplina de " + nomeAnterior + " para " + novoNome);
     }
 
-    // exclusao de disciplinas
+    @Transactional
     public void excluir(Long id) {
-        if (!repository.existsById(id)) {
-            throw new RecursoNaoEncontrado("Não é possível excluir uma disciplina inexistente!");
+        Usuario usuario = usuarioLogado();
+        Disciplina disciplina = buscarEntidadeDoUsuario(id, usuario.getId());
+
+        repository.delete(disciplina);
+
+        auditoriaService.registrar(usuario.getEmail(),AcaoAuditoria.EXCLUIR_DISCIPLINA,"Excluiu a disciplina: " + disciplina.getNome()
+        );
+    }
+
+    private Disciplina buscarEntidadeDoUsuario(Long id, Long usuarioId) {
+        return repository.findByIdAndUsuarioId(id, usuarioId)
+                .orElseThrow(() ->
+                        new RecursoNaoEncontrado("Disciplina não encontrada"));
+    }
+
+    private Usuario usuarioLogado() {
+        return securityUtils.getUsuarioLogado();
+    }
+
+    private String normalizarNome(String nome) {
+        return nome.trim().toLowerCase();
+    }
+
+    private DisciplinaOutputDTO paraOutput(Disciplina disciplina) {
+        return new DisciplinaOutputDTO(disciplina.getId(),capitalizar(disciplina.getNome()));
+    }
+
+    private String capitalizar(String texto) {
+        if (texto == null || texto.isBlank()) {
+            return texto;
         }
-        repository.deleteById(id);
+
+        return texto.substring(0, 1).toUpperCase()
+                + texto.substring(1);
     }
 }
